[gd_scene load_steps=5 format=3 uid="uid://bt6ofygv6cssg"]

[ext_resource type="Script" uid="uid://de0gd1onox2n" path="res://main_scene.gd" id="1_0f027"]
[ext_resource type="Script" uid="uid://nb3oo0272aju" path="res://Asset-Scripts/Card/player_card_display.gd" id="2_gyfs4"]
[ext_resource type="Texture2D" uid="uid://blxhek610du5l" path="res://Asset-Scripts/Card/Card Assets/Ace of Clubs.png" id="3_d5x1h"]
[ext_resource type="Script" uid="uid://bnikl0wfxvhs5" path="res://Asset-Scripts/Card/dealer_card_display.gd" id="4_d5x1h"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_0f027")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TurnLabel" type="Label" parent="Control"]
layout_mode = 1
offset_right = 86.0
offset_bottom = 23.0
text = "Hello world!"

[node name="DealerHandLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 24.0
offset_right = 103.0
offset_bottom = 47.0
text = "Dealer value:"

[node name="PlayerHandLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 48.0
offset_right = 95.0
offset_bottom = 71.0
text = "Your value:"

[node name="DealerHandValue" type="Label" parent="Control"]
layout_mode = 0
offset_left = 106.0
offset_top = 25.0
offset_right = 208.0
offset_bottom = 48.0
text = "0"

[node name="PlayerHandValue" type="Label" parent="Control"]
layout_mode = 0
offset_left = 93.0
offset_top = 49.0
offset_right = 186.0
offset_bottom = 72.0
text = "0"

[node name="History" type="Label" parent="Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 73.0
offset_right = 116.0
offset_bottom = 96.0
text = "Round history:"

[node name="HitButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 464.0
offset_top = 525.0
offset_right = 495.0
offset_bottom = 556.0
text = "Hit"

[node name="StandButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 664.0
offset_top = 514.0
offset_right = 717.0
offset_bottom = 545.0
text = "Stand"

[node name="StartButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 109.0
offset_top = 552.0
offset_right = 162.0
offset_bottom = 583.0
text = "Start"

[node name="PlayerDisplay" type="Node2D" parent="."]
script = ExtResource("2_gyfs4")

[node name="Sprite2D" type="Sprite2D" parent="PlayerDisplay"]
visible = false
position = Vector2(150, 400)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D2" type="Sprite2D" parent="PlayerDisplay"]
visible = false
position = Vector2(275, 400)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D3" type="Sprite2D" parent="PlayerDisplay"]
visible = false
position = Vector2(400, 400)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D4" type="Sprite2D" parent="PlayerDisplay"]
visible = false
position = Vector2(525, 400)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D5" type="Sprite2D" parent="PlayerDisplay"]
visible = false
position = Vector2(650, 400)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D6" type="Sprite2D" parent="PlayerDisplay"]
visible = false
position = Vector2(775, 400)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D7" type="Sprite2D" parent="PlayerDisplay"]
visible = false
position = Vector2(900, 400)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D8" type="Sprite2D" parent="PlayerDisplay"]
visible = false
position = Vector2(1025, 400)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="DealerDisplay" type="Node2D" parent="."]
script = ExtResource("4_d5x1h")

[node name="Sprite2D" type="Sprite2D" parent="DealerDisplay"]
visible = false
position = Vector2(150, 200)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D2" type="Sprite2D" parent="DealerDisplay"]
visible = false
position = Vector2(275, 200)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D5" type="Sprite2D" parent="DealerDisplay"]
visible = false
position = Vector2(400.5, 200.5)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D6" type="Sprite2D" parent="DealerDisplay"]
visible = false
position = Vector2(525.5, 200.5)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D7" type="Sprite2D" parent="DealerDisplay"]
visible = false
position = Vector2(650.5, 200.5)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D8" type="Sprite2D" parent="DealerDisplay"]
visible = false
position = Vector2(775.5, 200.5)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D9" type="Sprite2D" parent="DealerDisplay"]
visible = false
position = Vector2(900.5, 200.5)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[node name="Sprite2D10" type="Sprite2D" parent="DealerDisplay"]
visible = false
position = Vector2(1025.5, 200.5)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_d5x1h")

[connection signal="pressed" from="Control/HitButton" to="." method="_on_hit_button_pressed"]
[connection signal="pressed" from="Control/StandButton" to="." method="_on_stand_button_pressed"]
[connection signal="pressed" from="Control/StartButton" to="." method="_on_start_button_pressed"]
